--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_MasterLayout.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_MasterLayout.cshtml
@@ -10,7 +10,12 @@
   <link href="~/Content/styles.css" rel="stylesheet">
   <link href="~/Content/datatables.min.css" rel="stylesheet">
   <link href="~/Content/sweetalert.css" rel="stylesheet">
-  <link href="~/Content/AdminLTE.min.css" rel="stylesheet" />
+    <link href="~/Content/AdminLTE.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/Scripts/jquery-1.11.1.min.js"></script>
+    <script src="~/Scripts/sweetalert.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
   <!--Icons-->
 
   <!--[if lt IE 9]>
