--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_SidebarLayout.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Shared/_SidebarLayout.cshtml
@@ -35,15 +35,19 @@
             <svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Customer
           </a>
         </li>
-        <li>
-          <a class="" href="@Url.Action("WarehouseManagement", "Warehouses")">
-            <svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Warehouse
-          </a>
-        </li>
+          <li>
+              <a class="" href="@Url.Action("WarehouseManagement", "Warehouses")">
+                  <svg class="glyph stroked chevron-right"><use xlink:href="#stroked-chevron-right"></use></svg> Warehouse
+              </a>
+          </li>
+          
+
       </ul>
     </li>
     <li><a href="@Url.Action("ImportBillManagement", "ImportBill")"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Import Product</a></li>
-    <li><a href="widgets.html"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Widgets</a></li>
+    <li><a href="@Url.Action("ExportBillManagement", "ExportBill")"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Export Product</a></li>
+      
+      <li><a href="widgets.html"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Widgets</a></li>
     <li><a href="charts.html"><svg class="glyph stroked line-graph"><use xlink:href="#stroked-line-graph"></use></svg> Charts</a></li>
     <li><a href="tables.html"><svg class="glyph stroked table"><use xlink:href="#stroked-table"></use></svg> Tables</a></li>
     <li><a href="forms.html"><svg class="glyph stroked pencil"><use xlink:href="#stroked-pencil"></use></svg> Forms</a></li>
