--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/_ImportBillInsert.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/_ImportBillInsert.cshtml
@@ -93,10 +93,10 @@
                     </select>
                   </td>
                   <td>
-                    <input type="number" value="0" min="0" class="form-control product-quantity" name="quantity" />
+                    <input type="number" value="0" min="1" class="form-control product-quantity" name="quantity" />
                   </td>
                   <td>
-                    <input value="0" min="0" class="form-control product-price" name="price" />
+                    <input class="form-control product-price" name="price" readonly="readonly"/>
                   </td>
                 </tr>
               </table>
