--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/ProductManagement.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/Product/ProductManagement.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title</h2>
 <div class="row" id="area-product-form"></div>
-<div class="row">
+<div class="row" id="area-product-list">
   <div class="panel panel-info">
     <div class="panel-heading">
       <div class="col-lg-3 pull-left">
