--- a/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/ImportBillManagement.cshtml
+++ b/AutoAncillariesLimited/AutoAncillariesLimited/Views/ImportBill/ImportBillManagement.cshtml
@@ -5,7 +5,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<div id="import-bill-insert-form"></div>
+<div id="import-bill-insert-form" class="col-lg-9"></div>
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
@@ -82,11 +82,9 @@
 }
 
 <style>
-  #product-form-area {
-    width: 40%;
+  #import-bill-insert-form {
     z-index: 2;
     position: fixed;
-    top: 150px;
-    left: 37%;
+    left: 20%;
   }
 </style>
